# VibeSurf

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  PATCH_NOTES.md  README.md  README_zh.md  build-local.bat  build-local.sh  docker-compose.yml  nuitka-build.config  pyproject.toml  supervisord.conf  test_cors.html  vibesurf.spec
.github/workflows/: docker-build.yml  publish.yml
bu_agents/-Ftup-001/: AgentHistory.json
docs/: EXECUTABLE_BUILD.md  NUITKA_BUILD.md  PYPI_SETUP.md  cloud-manual-start.md
scripts/: build-exe-local.bat  build-exe-nuitka.bat  build-installer-local.bat  build-local.sh  build-whl-local.bat  build-whl-local.sh  setup-vibesurf-cloud.sh  vibesurf-installer.nsi
tests/: test_agents.py  test_aigc_tools.py  test_api_tools.py  test_backend_api.py  test_browser.py  test_controller.py  test_telemetry.py  test_tools.py  test_voice_api.py  test_website_api.py
vibe_surf/: __init__.py  cli.py  common.py  logger.py  utils.py
vibe_surf/agents/: browser_use_agent.py  report_writer_agent.py  vibe_surf_agent.py  vibe_surf_agent_new.py  views.py
vibe_surf/agents/prompts/: __init__.py  report_writer_prompt.py  vibe_surf_agent_new_prompt.py  vibe_surf_prompt.py
vibe_surf/backend/: llm_config.py  main.py  shared_state.py  voice_model_config.py
vibe_surf/backend/api/: __init__.py  activity.py  agent.py  browser.py  composio.py  config.py  files.py  models.py  profile.py  schedule.py  skill.py  task.py  tool.py  vibesurf.py  voices.py
vibe_surf/backend/database/: __init__.py  manager.py  models.py  queries.py  schemas.py
vibe_surf/backend/langflow/: __init__.py  middleware.py
vibe_surf/backend/migrations/: __init__.py  init_db.py  seed_data.py
vibe_surf/backend/utils/: __init__.py  encryption.py  llm_factory.py  utils.py  workflow_converter.py
vibe_surf/browser/: __init__.py  agen_browser_profile.py  agent_browser_session.py  browser_manager.py  find_page_element.py  page_operations.py  utils.py  welcome_modal_content.py
vibe_surf/browser/watchdogs/: action_watchdog.py  dom_watchdog.py
vibe_surf/chrome_extension/: background.js  config-module.js  config.js  content.js  dev-reload.js  manifest.json  permission-iframe.html  permission-request.html  popup.html  sidepanel.html
vibe_surf/chrome_extension/icons/: convert-svg.js  logo-preview.html  logo.icns
vibe_surf/chrome_extension/scripts/: api-client.js  file-manager.js  history-manager.js  i18n-helper.js  main.js  modal-manager.js  news-carousel.js  parser.min.js  permission-iframe-request.js  permission-request.js  session-manager.js  settings-general.js  settings-integrations.js  settings-manager.js  settings-profiles.js  settings-workflow.js  ui-manager.js  user-settings-storage.js  version.js  voice-recorder.js  weather-manager.js  workflow-recorder.js
vibe_surf/chrome_extension/styles/: activity.css  animations.css  base.css  components.css  history-modal.css  input.css  layout.css  main.css  news-carousel.css  profile-transfer-modal.css  responsive.css  settings-environment.css  settings-forms.css  settings-integrations.css  settings-modal.css  settings-profiles.css  settings-responsive.css  settings-utilities.css  settings-workflow.css  settings.css  variables.css  weather.css
vibe_surf/controller/: browser_use_tools.py  file_system.py  mcp_client.py  vibesurf_controller.py  vibesurf_tools.py
vibe_surf/frontend/: README.md  frontend_dev.mdc  package-lock.json  package.json  pnpm-lock.yaml
vibe_surf/langflow/: __main__.py  alembic.ini  langflow_launcher.py  main.py  memory.py  middleware.py  server.py  worker.py
vibe_surf/langflow/alembic/: env.py  script.py.mako
vibe_surf/langflow/api/: __init__.py  build.py  health_check_router.py  limited_background_tasks.py  log_router.py  router.py  utils.py
vibe_surf/langflow/components/: __init__.py
vibe_surf/langflow/core/: celery_app.py
vibe_surf/langflow/custom/: __init__.py  attributes.py  eval.py  utils.py
vibe_surf/langflow/events/: event_manager.py
vibe_surf/langflow/exceptions/: api.py  component.py
vibe_surf/langflow/field_typing/: __init__.py  constants.py
vibe_surf/langflow/graph/: __init__.py  schema.py  utils.py
vibe_surf/langflow/helpers/: data.py  flow.py  folders.py  user.py
vibe_surf/langflow/initial_setup/: constants.py  setup.py
vibe_surf/langflow/inputs/: input_mixin.py  inputs.py  utils.py
vibe_surf/langflow/interface/: components.py  listing.py  run.py  utils.py
vibe_surf/langflow/io/: __init__.py  schema.py
vibe_surf/langflow/legacy_custom/: customs.py
vibe_surf/langflow/load/: load.py  utils.py
vibe_surf/langflow/logging/: logger.py  setup.py
vibe_surf/langflow/processing/: process.py
vibe_surf/langflow/schema/: artifact.py  content_types.py  data.py  dataframe.py  graph.py  image.py  log.py  message.py  playground_events.py  schema.py  serialize.py
vibe_surf/langflow/serialization/: serialization.py
vibe_surf/langflow/services/: deps.py  factory.py  manager.py  utils.py
vibe_surf/langflow/template/: __init__.py  utils.py
vibe_surf/langflow/utils/: component_utils.py  data_structure.py  schemas.py  template_validation.py  util.py  util_strings.py  validate.py  version.py  voice_utils.py
vibe_surf/llm/: __init__.py  openai_compatible.py
vibe_surf/notebook/: config.py  launcher.py  utils.py
vibe_surf/telemetry/: __init__.py  service.py  views.py
vibe_surf/tools/: browser_use_tools.py  composio_client.py  file_system.py  finance_tools.py  mcp_client.py  report_writer_tools.py  utils.py  vibesurf_registry.py  vibesurf_tools.py  views.py  voice_asr.py  website_api_skills.py
vibe_surf/tools/aigc/: qwen3_asr.py  qwen_mt.py
vibe_surf/tools/website_api/: base_client.py
vibe_surf/tools/xhs/: __init__.py  utils.py  xhs_api.py  xhs_tools.py
vibe_surf/workflows/AIGC/: comfyui_api.py  genai_image_generator.py  media_viewer.py  qwen_asr.py  qwen_mt.py  vertex_image_generator.py  video_subtitle.py
vibe_surf/workflows/Browser/: browser_click.py  browser_click_element.py  browser_download_media.py  browser_drag_drop.py  browser_go_back.py  (+23 more)
(+907 files in other folders)
