[project]
name = "vibesurf"
dynamic = ["version"]
authors = [{ name = "WarmShao" }]
description = "VibeSurf: A powerful browser assistant for vibe surfing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["browser use", "browser automation", "browser assistant", "agentic browser", "vibe surf", "AI browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "uuid7>=0.1.0",
    "aiofiles>=24.1.0",
    "anyio>=4.9.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "cdp-use>=1.4.1",
    "json-repair>=0.48.0",
    "aiohttp>=3.12.15",
    "scikit-image>=0.25.2",
    "python-socks>=2.7.2",
    "langgraph>=0.6.4",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.43",
    "aiosqlite>=0.21.0",
    "rich>=13.0.0",
    "greenlet>=3.2.4",
    "getmac>=0.9.5",
    "markdown-pdf>=1.9",
    "nanoid>=2.0.0",
    "markdownify>=1.2.0",
    "pathvalidate>=3.3.1",
    "dashscope>=1.24.5",
    "yfinance>=0.2.66",
    "pyexecjs>=1.5.1",
    "youtube-transcript-api>=1.2.2",
    "composio>=0.8.20",
    "composio-langchain>=0.8.20",
    "browser-use==0.8.1",
    "google-genai>=1.29.0,<2.0.0",
    "openai>=1.99.2,<2.0.0",
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "lfx>=0.1.13",
    "sqlmodel>=0.0.27",
    "multiprocess>=0.70.18",
    "python-jose>=3.5.0",
    "celery>=5.5.3",
    "fastapi-pagination>=0.14.3",
    "diskcache>=5.6.3",
    "opentelemetry-api>=1.25.0,<2.0.0",
    "opentelemetry-sdk>=1.25.0,<2.0.0",
    "opentelemetry-exporter-prometheus>=0.46b0,<1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0.0",
    "alembic>=1.13.0,<2.0.0",
]

[project.urls]
Repository = "https://github.com/vibesurf-ai/VibeSurf"

[project.scripts]
vibesurf = "vibe_surf.cli:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["vibe_surf*"] } }

[tool.setuptools.package-data]
"vibe_surf" = [
    "backend/**/*",
    "chrome_extension/**/*"
]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools_scm]
write_to = "vibe_surf/_version.py"
