[project]
name = "vibesurf"
dynamic = ["version"]
authors = [{ name = "WarmShao" }]
description = "VibeSurf: A powerful browser assistant for vibe surfing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["browser use", "browser automation", "browser assistant", "agentic browser", "vibe surf", "AI browser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "uuid7>=0.1.0",
    "aiofiles>=24.1.0",
    "anyio>=4.9.0",
    "psutil>=7.0.0",
    "cdp-use>=1.4.1",
    "aiohttp>=3.12.15",
    "scikit-image>=0.25.2",
    "python-socks>=2.7.2",
    "langgraph>=0.6.4",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.21.0",
    "rich>=13.0.0",
    "greenlet>=3.2.4",
    "getmac>=0.9.5",
    "markdown-pdf>=1.9",
    "nanoid>=2.0.0",
    "markdownify>=1.2.0",
    "pathvalidate>=3.3.1",
    "dashscope>=1.24.5",
    "pyexecjs>=1.5.1",
    "browser-use==0.9.5",
    "google-genai>=1.48.0,<2.0.0",
    "openai>=1.99.2,<2.0.0",
    "google-api-python-client>=2.174.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "pypdf>=5.7.0",
    "authlib>=1.6.0",
    "websockets>=15.0.1",
    "json-repair>=0.48.0",
    "yfinance>=0.2.66",
    # langflow base
    "fastapi>=0.115.2,<1.0.0",
    "httpx[http2]>=0.27,<1.0.0",
    "aiofile>=3.9.0,<4.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "gunicorn>=22.0.0,<24.0.0",
    "langchain~=0.3.21",
    "langchain-community~=0.3.20",
    "langchain-core~=0.3.45",
    "langchainhub~=0.1.15",
    "loguru>=0.7.1,<1.0.0",
    "structlog>=25.4.0",
    "rich>=14.0.0",
    "langchain-experimental>=0.3.4,<1.0.0",
    "sqlmodel==0.0.22",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.2.0,<3.0.0",
    "typer>=0.13.0,<1.0.0",
    "cachetools>=5.5.0,<6.0.0",
    "platformdirs>=4.2.0,<5.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "orjson==3.10.15",
    "alembic>=1.13.0,<2.0.0",
    "passlib>=1.7.4,<2.0.0",
    "bcrypt==4.0.1",
    "pillow>=11.1.0,<12.0.0",
    "docstring-parser>=0.16,<1.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "pandas==2.2.3",
    "multiprocess>=0.70.14,<1.0.0",
    "duckdb>=1.0.0,<2.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "jq>=1.7.0,<2.0.0; sys_platform != 'win32'",
    "nest-asyncio>=1.6.0,<2.0.0",
    "emoji>=2.12.0,<3.0.0",
    "cryptography>=42.0.5,<44.0.0",
    "asyncer>=0.0.5,<1.0.0",
    "pyperclip>=1.8.2,<2.0.0",
    "uncurl>=0.0.11,<1.0.0",
    "sentry-sdk[fastapi,loguru]>=2.5.1,<3.0.0",
    "chardet>=5.2.0,<6.0.0",
    "firecrawl-py>=1.0.16,<2.0.0",
    "opentelemetry-api>=1.25.0,<2.0.0",
    "opentelemetry-sdk>=1.25.0,<2.0.0",
    "opentelemetry-exporter-prometheus>=0.46b0,<1.0.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "setuptools>=78.1.0,<79.0.0",
    "nanoid>=2.0.0,<3.0.0",
    "filelock>=3.15.4,<4.0.0",
    "grandalf>=0.8.0,<1.0.0",
    "spider-client>=0.0.27,<1.0.0",
    "diskcache>=5.6.3,<6.0.0",
    "clickhouse-connect==0.7.19",
    "assemblyai>=0.33.0,<1.0.0",
    "fastapi-pagination>=0.13.1,<1.0.0",
    "defusedxml>=0.7.1,<1.0.0",
    "pypdf>=5.1.0",
    "validators>=0.34.0",
    "networkx>=3.4.2",
    "json-repair>=0.30.3",
    "mcp~=1.10.1",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    "jsonquerylang>=1.1.1",
    'elevenlabs==1.58.1; python_version == "3.12"',
    'elevenlabs>=1.52.0; python_version != "3.12"',
    "scipy>=1.15.2",
    "ibm-watsonx-ai>=1.3.1",
    "langchain-ibm>=0.3.8",
    "trustcall>=0.0.38",
    "langchain-chroma>=0.1.4",
    # langflow
    "beautifulsoup4==4.12.3",
    "google-search-results>=2.4.1,<3.0.0",
    "google-api-python-client>=2.154.0",
    "huggingface-hub[inference]>=0.23.2,<1.0.0",
    "networkx==3.4.2",
    "fake-useragent==1.5.1",
    "pyarrow==19.0.0",
    "wikipedia==1.4.0",
    "qdrant-client==1.9.2",
    "weaviate-client>=4.10.2",
    "faiss-cpu==1.9.0.post1",
    "types-cachetools>=5.5.0.20240820,<6.0.0",
    "pymongo==4.10.1",
    "supabase>=2.6.0,<3.0.0",
    "certifi>=2023.11.17,<2025.0.0",
    'fastavro==1.9.7; python_version < "3.13"',
    'fastavro>=1.9.8,<2.0.0; python_version >= "3.13"',
    "redis>=5.2.1,<6.0.0",
    "metaphor-python==0.1.23",
    'pywin32==307; sys_platform == "win32"',
    "langfuse==2.53.9",
    "metal_sdk==2.5.1",
    "MarkupSafe==3.0.2",
    "boto3>=1.34.162,<2.0.0",
    "numexpr==2.10.2",
    "qianfan==0.3.5",
    "pgvector==0.3.6",
    "langchain==0.3.23",
    "elasticsearch==8.16.0",
    "pytube==15.0.0",
    "dspy-ai==2.5.41",
    "datasets>2.14.7,<4.0.0",
    "assemblyai==0.35.1",
    "litellm>=1.60.2,<2.0.0",
    "chromadb>=1.0.0,<2.0.0",
    "zep-python==2.0.2",
    "youtube-transcript-api>=1.2.3",
    "Markdown==3.7",
    "upstash-vector==0.6.0",
    "GitPython==3.1.43",
    "kubernetes==31.0.0",
    "json_repair>=0.30.3",
    "langwatch>=0.2.11,<0.3.0",
    "langsmith>=0.3.42,<1.0.0",
    "yfinance>=0.2.50",
    "wolframalpha==5.1.3",
    "astra-assistants[tools]>=2.2.13,<3.0.0",
    "composio==0.8.20",
    "composio-langchain==0.8.20",
    "spider-client==0.1.24",
    "nltk==3.9.1",
    "lark==1.2.2",
    "jq==1.8.0",
    "pydantic-settings>=2.2.0,<3.0.0",
    "duckduckgo_search==7.2.1",
    "opensearch-py==2.8.0",
    "langchain-google-genai>=2.0.6",
    "langchain-cohere==0.3.3",
    "langchain-huggingface==0.3.1",
    "langchain-anthropic==0.3.14",
    "langchain-astradb>=0.6.1,<1.0.0",
    "langchain-openai>=0.2.12,<1.0.0",
    "langchain-google-vertexai>=2.0.7,<3.0.0",
    "langchain-groq==0.2.1",
    "langchain-pinecone>=0.2.8,<1.0.0",
    "langchain-mistralai==0.2.3",
    "langchain-chroma>=0.2.6,<1.0.0",
    "langchain-aws==0.2.33",
    "langchain-unstructured==0.1.5",
    "langchain-milvus==0.1.7",
    "langchain-mongodb==0.7.0",
    "langchain-nvidia-ai-endpoints==0.3.8",
    "langchain-google-calendar-tools==0.0.1",
    "langchain-google-community==2.0.3",
    "langchain-elasticsearch==0.3.0",
    "langchain-ollama==0.2.1",
    "langchain-sambanova==0.1.0",
    "langchain-community>=0.3.21,<1.0.0",
    "sqlalchemy[aiosqlite]>=2.0.38,<3.0.0",
    "atlassian-python-api==3.41.16",
    "mem0ai==0.1.34",
    "needle-python>=0.4.0,<1.0.0",
    "aiofile>=3.9.0,<4.0.0",
    "sseclient-py==1.8.0",
    "arize-phoenix-otel>=0.6.1,<1.0.0",
    "openinference-instrumentation-langchain>=0.1.29,<0.1.52",
    # "crewai>=0.126.0",
    "mcp>=1.10.1,<2.0.0",
    "uv==0.7.20",
    "scipy>=1.14.1,<1.16.2",
    "scrapegraph-py>=1.12.0,<2.0.0",
    "pydantic-ai>=0.0.19,<1.0.0",
    "smolagents>=1.8.0,<2.0.0",
    "apify-client>=1.8.1,<2.0.0",
    "langchain-graph-retriever==0.8.0",
    "graph-retriever==0.8.0",
    "ibm-watsonx-ai>=1.3.1,<2.0.0",
    "langchain-ibm>=0.3.8",
    "opik>=1.6.3,<2.0.0",
    "cleanlab-tlm>=1.1.2,<2.0.0",
    'gassist>=0.0.1; sys_platform == "win32"',
    "twelvelabs>=0.4.7,<1.0.0",
    "filelock>=3.18.0,<4.0.0",
    "jigsawstack==0.2.7",
    "structlog>=25.4.0,<26.0.0",
    "cryptography>=43.0.1,<44.0.0",
    "aiosqlite==0.21.0",
    "fastparquet>=2024.11.0,<2025.0.0",
    "traceloop-sdk>=0.43.1,<1.0.0",
    "docling_core>=2.36.1",
    "docling>=2.36.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "easyocr>=1.7.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "opencv-python>=4.11; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pytest-codspeed==4.0.0", # Pinned to avoid python3.13 + intel mac compatibility issues
    "celery>=5.5.3",
    "croniter>=6.0.0",
    "xhshow>=0.1.3",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
]

[project.urls]
Repository = "https://github.com/vibesurf-ai/VibeSurf"

[project.scripts]
vibesurf = "vibe_surf.cli:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["vibe_surf*"], exclude = ["vibe_surf.frontend*"] } }

[tool.setuptools.package-data]
"vibe_surf" = [
    "backend/**/*",
    "chrome_extension/**/*",
    "backend/frontend/**/*",
    "langflow/**/*"
]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools_scm]
write_to = "vibe_surf/_version.py"
